remove license headers for source files in favour of a single license file at the repo root

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "annotations"
   ],
   "homepage": "https://github.com/pgraham/php-annotations",
-  "license": "BSD",
+  "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "Philip Graham",
